@@ -22,6 +22,7 @@ Bugs fixed:
 - 2888178 getObjectPath() ignores numeric types
 - 2881700 Build failure when docs are enabled
 - 1993231 configure doesn't fail for all missing dependencies
+- 2093567 Qualifiers are not returned for REF properties
 
 Changes in 1.3.5
 ================
